--- a/MongoDBFramework/MongoDBFramework.csproj
+++ b/MongoDBFramework/MongoDBFramework.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.0" />
   </ItemGroup>
 
